opam-version: "2.0"
name: "ocaml2lang"
synopsis: "Compiler from OCaml to AnerisLang"
version: "0.1"
description: "Compiler from OCaml to AnerisLang"
maintainer: "gondelman@cs.a.k"
authors: [
  "Léon Gondelman"
  "Mário Pereira"
]
license: "MIT"
homepage: "https://github.com/leon-gondelman/ocaml2lang"
bug-reports: "https://github.com/leon-gondelman/ocaml2lang/issues"
dev-repo: "https://github.com/leon-gondelman/ocaml2lang"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
   "dune" {>= "2.4.0"}
  "ocaml" {>= "4.06"}
]
