opam-version: "2.0"
synopsis: "Compiler from OCaml to AnerisLang"
description: "Compiler from OCaml to AnerisLang"
maintainer: "Léon Gondelman <gondelman@cs.au.dk>"
authors: [
  "Léon Gondelman"
  "Mário Pereira"
]
license: "MIT"
homepage: "https://github.com/leon-gondelman/ocaml2lang"
bug-reports: "https://github.com/leon-gondelman/ocaml2lang/issues"
url {
  src:
    "https://github.com/leon-gondelman/ocaml2lang/archive/refs/tags/0.1.tar.gz"
  checksum: [
    "md5=cf2f89b976588aeb3b13c3c674b61b73"
    "sha512=7205daec89dc71439d9f122a143a95528469a6b695df7abc98583495750cbabb19840c57fc5047f73002af111562ea6c9fae6f1ab02d8078866ac96f6fd7b253"
  ]
}
dev-repo: "git+https://github.com/leon-gondelman/ocaml2lang.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
   "dune"  {>= "2.9.0"}
   "ocaml" {>= "4.11"}
]
